# LibC

./: C.cpp  C.h  CMakeLists.txt  dependencies.cmake  gtest.cpp  libCConfig.cmake
